--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-CakePHP 3
-
-/vendor/*
-/config/app.php
-/tmp/*
-/logs/*
-
-CakePHP 2
-
-/app/tmp/*
-/app/Config/core.php
-/app/Config/database.php
-/vendors/*
+.settings
+.project
+.buildpath
